app/pb_kits/playbook/pb_date_picker/sass_partials/_calendar_input_icon.scss
// calendar icon styles
.cal_icon_wrapper {
  position: absolute;
  top: $space_md + 2;
  right: 0;
  border-left: 1px solid $border_light;
  width: $space_xl + $space_xs;
  height: $space_xl + 5;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: $space_sm - 1;
  color: $text_lt_light;
  @media (hover: hover) {
    &:hover {
      cursor: pointer;
    }
  }
  &.dark {
    color: $white;
    border-color: $white;
  }
  &.no_label_shift {
    top: 0;
  }
}
.cal_icon {
  width: $space_sm;
}

